Update 2: implement upload API in other service; serve media files from MinIO object store